<resources>
    <string name="app_name">Taks</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="featured_articles">Featured Articles</string>
    <string name="_5_minutes_of_daily_yoga_lifetime_of_strength_adventure">5 minutes of daily Yoga, lifetime of strength,Adventure</string>
    <string name="featured_videos">Featured Videos</string>

</resources>
