<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="60dp"
        android:text="@string/email"
        android:textColor="@color/email_txt"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/email_txt" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textColor="@color/email_txt"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_email"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/email_txt" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_btn"
        android:elevation="10dp"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:paddingRight="25dp"
        android:paddingBottom="20dp"
        android:text="@string/log_in"
        android:textColor="@color/email_txt"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"/>

</LinearLayout>