<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DashboardFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/featured_articles"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/party" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/image_text_background"
                    android:text="@string/_5_minutes_of_daily_yoga_lifetime_of_strength_adventure"
                    android:textColor="@color/email_txt"
                    android:textSize="8sp"
                    android:padding="8dp"
                    android:textStyle="bold" />


            </FrameLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/quite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/image_text_background"
                    android:text="@string/_5_minutes_of_daily_yoga_lifetime_of_strength_adventure"
                    android:textColor="@color/email_txt"
                    android:textSize="8sp"
                    android:padding="8dp"
                    android:textStyle="bold" />


            </FrameLayout>



        </androidx.cardview.widget.CardView>




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/featured_videos"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/party" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:background="@drawable/image_text_background_"
                    android:text="01:25:00"
                    android:textColor="@color/email_txt"
                    android:textSize="8sp"
                    android:padding="8dp"
                    android:textStyle="bold" />


            </FrameLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/quite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:background="@drawable/image_text_background_"
                    android:text="1:25:00"
                    android:textColor="@color/email_txt"
                    android:textSize="8sp"
                    android:padding="8dp"
                    android:textStyle="bold" />


            </FrameLayout>



        </androidx.cardview.widget.CardView>




    </LinearLayout>



</LinearLayout>